terraform/25-aws-auto-scaling/RT-public.tf
resource "aws_route_table" "routing-table" {
	vpc_id=aws_vpc.vpc.id
	route {
		cidr_block="0.0.0.0/0"
		gateway_id=aws_internet_gateway.igw.id
	}
	tags={
		Name="asg-RT"
	}
}
