terraform/25-aws-auto-scaling/public-subnet-association.tf
resource "aws_route_table_association" "public-associate-1" {
	subnet_id=aws_subnet.public_subnet_1.id
	route_table_id=aws_route_table.routing-table.id
}
resource "aws_route_table_association" "public-associate-2" {
  subnet_id=aws_subnet.public_subnet_2.id
  route_table_id=aws_route_table.routing-table.id
}
