terraform/25-aws-auto-scaling/vpc.tf
resource "aws_vpc" "vpc" {
	tags={
		Name="ASG-vpc"
	}
	cidr_block="10.0.0.0/16"
	enable_dns_hostnames=true
}
